<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/anno_menu_bg"
    android:layout_width="@dimen/annotation_menu_width"
    android:layout_height="@dimen/annotation_menu_height">

    <TextView
        android:id="@+id/btn_pre"
        android:layout_alignParentStart="true"
        android:visibility="gone"
        android:layout_width="15dp"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_toEndOf="@id/btn_pre"
        android:layout_toStartOf="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <sjtu.yhapter.reader.widget.ImageTextView
            android:id="@+id/btn_copy"
            style="@style/AnnotationMenuTheme"
            android:drawableTop="@drawable/anno_menu_copy"
            android:text="@string/annotation_copy" />

        <sjtu.yhapter.reader.widget.ImageTextView
            android:id="@+id/btn_drawline"
            style="@style/AnnotationMenuTheme"
            android:drawableTop="@drawable/anno_menu_draw"
            android:text="@string/annotation_drawline" />

        <sjtu.yhapter.reader.widget.ImageTextView
            android:id="@+id/btn_writeidea"
            style="@style/AnnotationMenuTheme"
            android:drawableTop="@drawable/anno_menu_idea"
            android:text="@string/annotation_writeidea" />

        <sjtu.yhapter.reader.widget.ImageTextView
            android:id="@+id/btn_query"
            style="@style/AnnotationMenuTheme"
            android:drawableTop="@drawable/anno_menu_query"
            android:text="@string/annotation_query" />

        <sjtu.yhapter.reader.widget.ImageTextView
            android:id="@+id/btn_share"
            style="@style/AnnotationMenuTheme"
            android:drawableTop="@drawable/anno_menu_share"
            android:text="@string/annotation_share" />
    </LinearLayout>

    <TextView
        android:id="@+id/btn_next"
        android:layout_width="15dp"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:visibility="gone" />

</RelativeLayout>